# roots

./: .travis.yml  CMakeLists.txt  README.md
doc/: .gitignore  Doxyfile
include/: CMakeLists.txt
include/roots/: CMakeLists.txt  cubic_equation.hpp  quadratic_equation.hpp  roots.hpp
include/shirose/: roots.hpp
scripts/: install-googletest.sh
test/: CMakeLists.txt  roots_test.cpp
